tests/baselines/reference/jsDeclarationsReactComponents.errors.txt
tests/cases/conformance/jsdoc/declarations/jsDeclarationsReactComponents3.jsx(1,1): error TS9005: Declaration emit for this file requires using private name 'props'. An explicit type annotation may unblock declaration emit.


==== tests/cases/conformance/jsdoc/declarations/jsDeclarationsReactComponents1.jsx (0 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import React from "react";
    import PropTypes from "prop-types"
    
    const TabbedShowLayout = ({
    }) => {
        return (
            <div />
        );
    };
    
    TabbedShowLayout.propTypes = {
        version: PropTypes.number,
    
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: undefined
    };
    
    export default TabbedShowLayout;
    
==== tests/cases/conformance/jsdoc/declarations/jsDeclarationsReactComponents2.jsx (0 errors) ====
    import React from "react";
    /**
     * @type {React.SFC}
     */
    const TabbedShowLayout = () => {
        return (
            <div className="" key="">
                ok
            </div>
        );
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: "default value"
    };
    
    export default TabbedShowLayout;
    
==== tests/cases/conformance/jsdoc/declarations/jsDeclarationsReactComponents3.jsx (1 errors) ====
    import React from "react";
    ~~~~~~
!!! error TS9005: Declaration emit for this file requires using private name 'props'. An explicit type annotation may unblock declaration emit.
    /**
     * @type {{defaultProps: {tabs: string}} & ((props?: {elem: string}) => JSX.Element)}
     */
    const TabbedShowLayout = () => {
        return (
            <div className="" key="">
                ok
            </div>
        );
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: "default value"
    };
    
    export default TabbedShowLayout;
    
==== tests/cases/conformance/jsdoc/declarations/jsDeclarationsReactComponents4.jsx (0 errors) ====
    import React from "react";
    const TabbedShowLayout = (/** @type {{className: string}}*/prop) => {
        return (
            <div className={prop.className} key="">
                ok
            </div>
        );
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: "default value"
    };
    
    export default TabbedShowLayout;
==== tests/cases/conformance/jsdoc/declarations/jsDeclarationsReactComponents5.jsx (0 errors) ====
    import React from 'react';
    import PropTypes from 'prop-types';
    
    function Tree({ allowDropOnRoot }) {
      return <div />
    }
    
    Tree.propTypes = {
        classes: PropTypes.object,
    };
    
    Tree.defaultProps = {
        classes: {},
        parentSource: 'parent_id',
    };
    
    export default Tree;